--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body{
     display: flex;
     font-size: 14px;
     font-weight: 500;
-    border-radius: 15px;
+    border-radius: 100%;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
     transition: background .15s linear;
