--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body{
     display: flex;
     font-size: 14px;
     font-weight: 500;
-    border-radius: 25px;
+    border-radius: 5px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
     transition: background .15s linear;
@@ -41,6 +41,6 @@ body{
 .btn:hover {
 
     background-color: #0B3B73;
-    color: hsl(0, 0%, 50%);    
+    color: #FFFFFF;    
 }
 
