--- a/style.css
+++ b/style.css
@@ -1,46 +1,33 @@
-body{
-    margin: 20px;
-    padding: 0px;
-    font-size: 14px;
-    color: var(--tg-theme-text-color);
-    background: black;
-
-}
-
 .container {
 
-    max-width: 353px;
-}
-
-
-
-
-.btn {
-    
-    margin-top: 10px;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    width: 353px;
-    height: 51px;
-    color: white;
-    background: #1676E7;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 393px;
+    height: 698px;
     display: flex;
-    font-size: 14px;
-    font-weight: 500;
-    border-radius: 5px;
+    background-color: black;
+
+}
+
+.inner {
+
+    font-size: 24px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 20px;
+    color: white;
 
-    transition: background .15s linear;
 }
 
-.usercard {
-    text-align: left;
+.item {
+
+    position: absolute;
+    left: 20px;
+    top: 634px;
+    display: inline-block;
+    background-color: #1676E7;
+    width: 351px;
+    height: 50px;
+    border-radius: 15px;
+
 }
-
-.btn:hover {
-
-    background-color: #0B3B73;
-    color: #FFFFFF;    
-}
-
