--- a/style.css
+++ b/style.css
@@ -133,8 +133,8 @@ basket {
     text-align: center;
     margin-top: 10px;
     margin-bottom: 64px;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: auto;
+    max-height: auto;
 }
 
 
